istio/destination_rules.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: kibana
spec:
  host: kibana-kibana.elk.svc.cluster.local
  subsets:
  - name: v1
    labels:
---
